--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,10 +16,9 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install -r requirements.txt
+    - run: |
+        python -m pip install --upgrade pip
+        pip install requests
     - name: Run scraper
       run: python scraper.py
     - uses: actions/upload-artifact@v3
