--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
   schedule:
     - cron: "0 0 * * *"
-    
+
 permissions:
   contents: read
 
@@ -16,9 +16,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-python@v4
+    - uses: actions/setup-python@v3
       with:
-        python-version: '3.10'
+        python-version: '3.x'
     - run: |
         python -m pip install --upgrade pip
         pip install requests
