--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,9 +16,10 @@ jobs:
     - uses: actions/setup-python@v4
       with:
         python-version: '3.10'
-    - run: |
-        python -m pip install --upgrade pip
-        pip install requests
+    # - name: Install dependencies
+    #   run: |
+    #     python -m pip install --upgrade pip
+    #     pip install -r requirements.txt
     - name: Run scraper
       run: python scraper.py
     - uses: actions/upload-artifact@v3
